[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["Roman-Ojha <razzroman98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "8.0.1"
colorama = "0.4.4"
Flask = "2.0.1"
itsdangerous = "2.0.1"
Jinja2 = "3.0.1"
joblib = "1.0.1"
MarkupSafe = "2.0.1"
sklearn = "^0.0.post1"
autopep8 = "^2.0.1"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
